# fastzy

./: .clang-format  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  cortex.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml  pythonpackage.yml
benchmarks/: fastzy_benchmark.py
fastzy/: __init__.py  fastzy.pyi
src/: fastzy.cpp  lib.rs
tests/: test_fastzy.py
