[package]
name = "fastzy"
version = "0.5.1"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "Python library for fast fuzzy search over a big file written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/fastzy"
homepage = "https://github.com/intsights/fastzy"
license = "MIT"
keywords = [
    "fuzzy",
    "levenshtein",
    "rust",
]

[package.metadata.maturin]

[lib]
name = "fastzy"
crate-type = ["cdylib"]

[dependencies]
bstr = "0.2"
bytecount = "0.6"
memchr = "2.4"
parking_lot = "0.11"
rayon = "1.5"
simdutf8 = "0.1"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
