[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "fastzy/*.py",
    "fastzy/*.pyi"
]

[tool.poetry]
name = "fastzy"
version = "0.4.0"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "Python library for fast fuzzy search over a big file written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/fastzy"
homepage = "https://github.com/intsights/fastzy"
license = "MIT"
keywords = [
    "fuzzy",
    "levenshtein",
    "rust"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
